third_party/WebKit/WebCore/bindings/js/JSWebGLRenderingContextCustom.cpp
@@ -33,10 +33,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ExceptionCode.h"
 #include "HTMLCanvasElement.h"
 #include "HTMLImageElement.h"
-#include "HTMLVideoElement.h"
 #include "JSHTMLCanvasElement.h"
 #include "JSHTMLImageElement.h"
-#include "JSHTMLVideoElement.h"
 #include "JSImageData.h"
 #include "JSWebGLBuffer.h"
 #include "JSWebGLFloatArray.h"
@@ -60,6 +58,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <runtime/Error.h>
 #include <wtf/FastMalloc.h>
 #include <wtf/OwnFastMallocPtr.h>
+
+#if ENABLE(VIDEO)
+#include "HTMLVideoElement.h"
+#include "JSHTMLVideoElement.h"
+#endif
 
 using namespace JSC;
 
@@ -353,9 +356,11 @@ JSValue JSWebGLRenderingContext::texImage2D(ExecState* exec, const ArgList& args
         } else if (o->inherits(&JSHTMLCanvasElement::s_info)) {
             HTMLCanvasElement* element = static_cast<HTMLCanvasElement*>(static_cast<JSHTMLCanvasElement*>(o)->impl());
             context->texImage2D(target, level, element, flipY, premultiplyAlpha, ec);
+#if ENABLE(VIDEO)
         } else if (o->inherits(&JSHTMLVideoElement::s_info)) {
             HTMLVideoElement* element = static_cast<HTMLVideoElement*>(static_cast<JSHTMLVideoElement*>(o)->impl());
             context->texImage2D(target, level, element, flipY, premultiplyAlpha, ec);
+#endif
         } else
             ec = TYPE_MISMATCH_ERR;
     } else {
@@ -462,9 +467,11 @@ JSValue JSWebGLRenderingContext::texSubImage2D(ExecState* exec, const ArgList& a
         } else if (o->inherits(&JSHTMLCanvasElement::s_info)) {
             HTMLCanvasElement* element = static_cast<HTMLCanvasElement*>(static_cast<JSHTMLCanvasElement*>(o)->impl());
             context->texSubImage2D(target, level, xoff, yoff, element, flipY, premultiplyAlpha, ec);
+#if ENABLE(VIDEO)
         } else if (o->inherits(&JSHTMLVideoElement::s_info)) {
             HTMLVideoElement* element = static_cast<HTMLVideoElement*>(static_cast<JSHTMLVideoElement*>(o)->impl());
             context->texSubImage2D(target, level, xoff, yoff, element, flipY, premultiplyAlpha, ec);
+#endif
         } else
             ec = TYPE_MISMATCH_ERR;
     } else {
